--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@ant-design/pro-layout": "^4.5.16",
     "@antv/data-set": "^0.10.2",
     "antd": "^3.23.6",
+    "bizcharts": "^3.5.6",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
     "lodash": "^4.17.11",
@@ -60,6 +61,7 @@
     "omit.js": "^1.0.2",
     "path-to-regexp": "^3.1.0",
     "qs": "^6.9.0",
+    "rc-queue-anim": "^1.8.3",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
